syntax = "proto3";
package cosmos.crypto.keyring.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "cosmos/crypto/hd/hd.proto";

option go_package = "github.com/cosmos/cosmos-sdk/crypto/keyring";
option (gogoproto.goproto_getters_all) = false;
/*

{"path":"proto/cosmos/crypto/keyring/types.proto","start_line":2,"start_column":1,
"end_line":2,"end_column":34,"type":"PACKAGE_DIRECTORY_MATCH","message":"Files with package 
\"cosmos.crypto.keyring.v1\" must be within a directory \"cosmos/crypto/keyring/v1\" 
relative to root but were in directory \"cosmos/crypto/keyring\"."}

*/

// Record is used for keyring migration from legacyInfo to proto.
message Record {
  string name = 1;
  google.protobuf.Any pub_key = 2;

  // Record contains one of the following items
  oneof item {
    Local local = 3;
    Ledger ledger  = 4;
    Empty empty  = 5;
  }

  // Item is a keyring item stored in a keyring backend.
  message Local {
    google.protobuf.Any priv_key = 1; 
    string priv_key_type = 2;
  }

  // Ledger item 
  message Ledger {
    hd.BIP44Params path = 1;
  }

  // Empty item
  message Empty {}
}
